gitops/apps/analytics/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    application: analytics
